feat: Fetch release date
